--- a/public/documentation.html
+++ b/public/documentation.html
@@ -5,66 +5,83 @@ This API lets users search and save information about their favorite movies, dir
 
 Endpoints:
 
-Read: 
-
-Returns list of movies -
-Endpoint - /movies
-
-app.get('/movies',(req, res) => {
-    res.status(200).json(topMovies)
-})
-
-Returns title of searched movies -
-Endpoint - /movies/[movieName]
-
-app.get('/movies/:title',(req, res) => {
-    const {title} = req.params;
-    const movie = movies.find(movie => movie.Title === title);
-
-    if (move) {
-        res.status(200).json(topMovies);
-    } else {
-        res.status(400).send('This movie does not exist')
-    }
-})
-
-Returns genre -
-
-app.get('/movies/genre/:genreName',(req, res) => {
-    const {genreName} = req.params;
-    const genre = movies.find(movie => movie.Genre.Name === genreName).Genre;
-
-    if (genre) {
-        res.status(200).json(genre);
-    } else {
-        res.status(400).send('This genre does not exist')
-    }
-})
-
-Returns director by name -
-
-app.get('/movies/directors/:directorName',(req, res) => {
-    const {directorName} = req.params;
-    const director = movies.find(movie => movie.Director.Name === directorName).Director;
-
-    if (director) {
-        res.status(200).json(director);
-    } else {
-        res.status(400).send('This director does not exist')
-    }
-})
+1. List of movies:
+    URL: /movies/[movieTitle]
+    HTTP method: GET
+    Request body: None
+    Response body: A JSON object holding data about movies -
+    Title: ""
+    Director: "" ..
+    Genre: "" ..
 
 
-Create:
+2. Find movie by title:
+    URL: /movies/[movieTitle]
+    HTTP method: GET
+    Request body: None
+    Response body: A JSON object holding data about movies -
+        Title: ""
+        Director: "" ..
+        Genre: "" ..
 
-app.post('/users', (req, res) => {
-    const newUser = req.body;
+3. Find movie by genre:
+    URL: /movies/[TITLE]
+    HTTP method: GET
+    Request body: None
+    Response body: A JSON object holding data about all movies listed under that genre and the genre description -
+        Title: ""
+        Director: "" ..
+        Genre:""
+            Description: ""
 
-    if (newUser.name) {
-        newUser.id = uuid.v4();
-        users.push(newUser);
-        res.status(201).json(newUser)
-    } else {
-        res.status(400).send('User needs a name')
-    }
-})
+4. Find movie by director:
+    URL: /movies/directors/[NAME]
+    HTTP method: GET
+    Request body: None
+    Response body: A JSON object holding data about movies listed under that director with movie info and bio - 
+        Title: ""
+        Director: ""
+            Bio: ""
+        Genre: "" ..
+
+5. Create user:
+    URL: /users
+    HTTP method: POST
+    Request body: A JSON object holding data about the user being added - 
+        Name: ""
+        favoriteMovies: []
+    Response body: A JSON object holding the information entered plus a generated ID number - 
+        Name: ""
+        favoriteMovies: []
+        id: ""
+
+6. Update user name:
+    URL: /users/[ID]
+    HTTP method: PUT
+    Request body: A JSON object holding the updated user name - 
+        Name: ""
+    Response body: A JSON object holding the users original information with the updated name - 
+        Name: "[updated]"
+        favoriteMovies: ""
+        id: ""
+
+7. Add movies to user favorites:
+    URL: /users/[ID]/[movieTitle]
+    HTTP method: POST
+    Request body: None
+    Response body: A message responding to the action - 
+        "[MOVIE] has been added to [ID]'s favorites!"
+
+8. Delete movie from user favorites:
+    URL: /users/[ID]/[movieTitle]
+    HTTP method: DELETE
+    Request body: None
+    Response body: A message responding to the action - 
+     "[MOVIE] has been removed from [ID]'s favorites!"
+
+9. Delete user:
+    URL: /users/[ID]
+    HTTP method: DELETE
+    Request body: None
+    Response body: A message responding to the action -
+        "User [ID] has been removed!"
