--- a/public/documentation.html
+++ b/public/documentation.html
@@ -6,7 +6,7 @@ This API lets users search and save information about their favorite movies, dir
 Endpoints:
 
 1. List of movies:
-    URL: /movies/[movieTitle]
+    URL: /movies
     HTTP method: GET
     Request body: None
     Response body: A JSON object holding data about movies -
@@ -25,7 +25,7 @@ Endpoints:
         Genre: "" ..
 
 3. Find movie by genre:
-    URL: /movies/[TITLE]
+    URL: /genre/[GenreName]
     HTTP method: GET
     Request body: None
     Response body: A JSON object holding data about all movies listed under that genre and the genre description -
@@ -35,7 +35,7 @@ Endpoints:
             Description: ""
 
 4. Find movie by director:
-    URL: /movies/directors/[NAME]
+    URL: /directors/[DirectorName]
     HTTP method: GET
     Request body: None
     Response body: A JSON object holding data about movies listed under that director with movie info and bio - 
@@ -56,7 +56,7 @@ Endpoints:
         id: ""
 
 6. Update user name:
-    URL: /users/[ID]
+    URL: /users/[UserName]
     HTTP method: PUT
     Request body: A JSON object holding the updated user name - 
         Name: ""
@@ -66,7 +66,7 @@ Endpoints:
         id: ""
 
 7. Add movies to user favorites:
-    URL: /users/[ID]/[movieTitle]
+    URL: /users/[username]/movies/[MovieID]
     HTTP method: POST
     Request body: None
     Response body: A message responding to the action - 
