--- a/public/documentation.html
+++ b/public/documentation.html
@@ -25,7 +25,7 @@ Endpoints:
         Genre: "" ..
 
 3. Find movie by genre:
-    URL: /genre/[GenreName]
+    URL: movies/genre/[GenreName]
     HTTP method: GET
     Request body: None
     Response body: A JSON object holding data about all movies listed under that genre and the genre description -
@@ -35,7 +35,7 @@ Endpoints:
             Description: ""
 
 4. Find movie by director:
-    URL: /directors/[DirectorName]
+    URL: movies/director/[DirectorName]
     HTTP method: GET
     Request body: None
     Response body: A JSON object holding data about movies listed under that director with movie info and bio - 
