--- a/public/documentation.html
+++ b/public/documentation.html
@@ -94,3 +94,11 @@ mongoimport --uri mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.m
 mongosh "mongodb+srv://cfcluster1.c2wxbg6.mongodb.net/myFlixDB" --apiVersion 1 --username mdsnraetff
 
 mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.mongodb.net/?retryWrites=true&w=majority
+
+mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.mongodb.net/myFlixDB?retryWrites=true&w=majority
+
+
+mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.mongodb.net/myFlixDB?retryWrites=true&w=majority
+
+mongo "mongodb+srv://cfcluster1.c2wxbg6.mongodb.net/myFlixDB" --username mdsnraetff
+
