--- a/public/documentation.html
+++ b/public/documentation.html
@@ -103,3 +103,5 @@ mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.mongodb.net/myFlixD
 mongodb+srv://mdsnraetff:a5baOiI9UMy8MTUE@cfcluster1.c2wxbg6.mongodb.net/myFlixDB?retryWrites=true&w=majority
 
 mongo "mongodb+srv://cfcluster1.c2wxbg6.mongodb.net/myFlixDB" --username mdsnraetff
+
+mongodb+srv://mdsnraetff:h6R3fSFLILgka77q@cfcluster1.c2wxbg6.mongodb.net/myFlixDB?retryWrites=true&w=majority
